assets/sass/site/primary/_posts-and-pages.scss
/* ... */
#sitemap ul {
	text-transform: uppercase;
}
#sitemap li {
	margin-bottom: 15px;
	background: url(images/bullet2.png) left top no-repeat;
}
hr {
	color: #000000;
	background-color: #000000;
	border: none;
	height: 1px;
}

#communities-title-box #page-heading {
	margin-bottom: 0px;
}


.contact {
}
#about-links {
	width: 100%;
	float: left;
	padding-top: 30px;

	h2 {
		font-size: 30px;
		font-weight: bold;
		border-bottom: 4px solid #159ACD;
		display: block;
		padding-bottom: 6px;
		@media screen and (min-width: $tabwidth) {
			// font-size: 14px;
		}
		@media screen and (min-width: $midwidth) {
			font-size: 20px;
		}
		@media screen and (min-width: $deskwidth) {
			font-size: 30px;
		}
	}
	
	a {
		color: #000000;
		text-decoration: none;
		&:hover {
			color: #159ACD;
			text-decoration: none;
		}
	}
	p {
		margin-top: 5px!important;
	}
}
.about-link1 {
	width: 100%;
	float: left;
	margin-right: 2%;
	img {width: 100%;}

	@media screen and (min-width: $tabwidth) {
		width: 30%;
	}
}
.about-link2 {
	width: 100%;
	float: left;
	img {width: 100%;}
	@media screen and (min-width: $tabwidth) {
		width: 30%;
	}
}
#page-right-column {
	width: 100%;
	float: right;
	@media screen and (min-width: $midwidth) {
		width: 30%;
	}

	@media screen and (min-width: $deskwidth) {
		// width: 400px;
	}
}
#page-right-column .infusion-field {
	width: 100%;
	margin-bottom: 5px!important;
}
#page-right-column .form-column {
	width: 100%;
}
#sub-home-search {
	width: 100%;
	float: left;
}
#sub-home-search-padding {
	padding: 0px 20px;
}
.about-office {
	width: 100%;
	// height: 223px;
	position: relative;
	float: left;
	margin: 0 0 20px 0;
	@media screen and (min-width: $tabwidth) {
		width: 30%;
		margin: 0 2% 20px 0;
	}
	@media screen and (min-width: $midwidth) {
		width: 100%;
		margin: 0 0 20px 0;
	}
	@media screen and (min-width: $deskwidth) {
		width: 100%;
	}
	
}
.about-office-image {
	width: 100%;
	float: left;
	line-height: 0;
	overflow: hidden;
	& img {
		width: 100%;
		line-height: 0;
		height: 100%;
	}
	@media screen and (min-width: $midwidth) {
		// width: 180px;
		float: left;
		display: none;
		height: 120px;
		min-height: 230px;
	}

	@media screen and (min-width: $deskwidth) {
		// width: 205px;
		width: 40%;
		display: block;
		height: auto
		

		
	}
}
.about-office-content {
	width: 100%;
	height: 100%;
	float: left;
	font-size: 14px;
	background-color: #0099CF;
	position: relative;
	min-height: 250px;
	@media screen and (min-width: $tabwidth) {
		min-height: 250px;
	}
	@media screen and (min-width: $midwidth) {
		// width: 50%;
		// width: 165px;
		float: left;

	}

	@media screen and (min-width: $deskwidth) {
		// width: 195px;
		width: 60%;
		min-height: auto;
		
	}
}
.about-office-text {
	padding: 15px;
	color: #ffffff;
	float: left;
	font-size: 14px;
	line-height: 15px;

}
.about-office-text h2 {
	color: #ffffff;
	font-weight: bold;
	font-size: 20px;
}
.about-office-text a {
	text-decoration: underline!important;
	color: #fff;
}
.about-office-contact {
	width: 100%;
	float: left;
	text-align: left;
	float: left;
	margin: 5px 0 0 0;
	clear: both;
	position: absolute;
	bottom: 0;
	right: 0;
}
.about-office-contact-padding {
	
}
.about-office-contact a {
	font-size: 15px;
	padding: 14px 15px 10px 15px;
	display: block;
	color: #ffffff;
	background-color: #3551A3;
}
.agent-profile-box {
	width: 46%;
	margin: 0 4% 30px 0;
	position: relative;
	float: left;
	z-index: 50;

	@media screen and (min-width: $tabwidth) {
		width: 28%;
		margin: 2%;
		float: left;
	}

	@media screen and (min-width: $deskwidth) {
		// width: 184px;
		width: 18%;
		margin: 0 2% 20px 0;
	}
	a {
		color: #ffffff;
		text-decoration: none;
		
	}
	img {
		width: 100%;
		
		filter: gray; /* IE6-9 */
  	filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */

		 
	
	}
	h2, h3 {word-break: normal;}
	.link a {
		width: 100%;
		height: 100%;
		position: absolute;
		top: 0;
		left: 0;
		z-index: 52;

		
	}

	&:hover img {
			filter: none;
		  -webkit-filter: grayscale(0);
		}
}
.agent-profile-box-content {
	width: 100%;
	position: absolute;
	bottom: 0px;
	left: 0px;
	background-color: #239CCB;
	z-index: 999999;
	font-size: 12px;
	word-break: break-all;
	padding: 10px;
	z-index: 50;
	h2 {
		font-size: 15px;
		color: #fff;
		margin: 0 0 0px 0;
	}

}
.agent-email {
	width: auto;
	position: absolute;
	bottom: 5px;
	left: 5px;
	z-index: 55;
	font-size: 10px;
	a {
		padding: 3px 0;
		display: block;
		&:hover {
			background-color: rgba(255,255,255,.4);

		}
	}
}
.agent-photo img {
	width: 100%;
	// height: 237px;
	-webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
	filter: grayscale(100%);
	filter: gray;
}
.agent-photo img:hover {
	width: 100%;
	// height: 237px;
	-moz-filter: grayscale(0);
	-ms-filter: grayscale(0);
	-o-filter: grayscale(0);
	filter: grayscale(0);
	/* for Webkit browsere, Chrome 19+, Safari 6+ ... */
    -webkit-filter: grayscale(0);
	/* this is for Firefox 3.5+, Firefox mobile */
	filter: none;
}
.bw-search .container {
	width: 100%;
	float: left;
	margin-top: 30px;
}
/* ... */

